--- a/Ecommerce.ipynb
+++ b/Ecommerce.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c13f58cc",
    "metadata": {},
@@ -9,6 +10,37 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0824550d",
+   "metadata": {},
+   "source": [
+    "**项目目标:** 通过RFM分析和K-Means聚类,为电子商务公司提供不同客户群体的营销方案。\n",
+    "\n",
+    "**工作内容:**\n",
+    "1.读取电商订单数据，包含订单号、客户ID等字段。\n",
+    "2.对客户进行RFM分析,计算出客户的：活跃程度(Recency)、购买频次(Frequency)、销售额(Monetary)。\n",
+    "3.将RFM值作为特征，使用K-Means聚类将客户分为不同群体。\n",
+    "4.分析和比较不同客户群的RFM特征和价值。\n",
+    "5.可视化客户分布、RFM指标分布等。\n",
+    "\n",
+    "**分析成果:**\n",
+    "成功将客户细分为多个群体,并简要分析了不同群体的特点和价值。 为电商提供定制化的营销方案。\n",
+    "\n",
+    "**总结与展望:**\n",
+    "RFM分析和K-Means聚类是客户细分分析的有效手段。下一步可以:\n",
+    "- 更深入分析不同群体的消费特征和需求\n",
+    "- 基于分析结果,制定定制化的营销计划\n",
+    "- 持续监测客户变化,不断优化客户细分模型\n",
+    "\n",
+    "**关键亮点:**\n",
+    "应用RFM分析和K-Means聚类实现客户细分\n",
+    "初步复习不同客户群体的特点和价值差异\n",
+    "提出后续分析的方向"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "14e23848-9ca7-464d-b02b-ef48308ea5d5",
    "metadata": {
@@ -19,6 +51,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "695e9b79",
    "metadata": {},
@@ -39,6 +72,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "79161348",
    "metadata": {},
@@ -54,6 +88,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ac381536-51fc-4aef-b9c7-a530ca7c16c0",
    "metadata": {},
@@ -66,10 +101,7 @@
    "execution_count": 1,
    "id": "2e1d0295",
    "metadata": {
-    "tags": [],
-    "vscode": {
-     "languageId": "python"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -85,6 +117,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b01b2343-3c11-46c8-bf64-e1737826e773",
    "metadata": {
@@ -99,10 +132,7 @@
    "execution_count": 2,
    "id": "1cc04ed1",
    "metadata": {
-    "tags": [],
-    "vscode": {
-     "languageId": "python"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -113,6 +143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "53202dfd-6e90-4436-b05d-2e3da4cedcc7",
    "metadata": {},
@@ -121,6 +152,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5150c690-f0e9-47ab-8f78-8babf99baf29",
    "metadata": {},
@@ -133,10 +165,7 @@
    "execution_count": 3,
    "id": "0e7d9b0f",
    "metadata": {
-    "tags": [],
-    "vscode": {
-     "languageId": "python"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -166,6 +195,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5d774085-2208-4353-b9ef-2c6d6a914bc2",
    "metadata": {
@@ -180,10 +210,7 @@
    "execution_count": 4,
    "id": "80d7e9f9",
    "metadata": {
-    "tags": [],
-    "vscode": {
-     "languageId": "python"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -217,6 +244,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9178d024-76f6-4e16-830a-629da6448701",
    "metadata": {
@@ -230,11 +258,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "857ff2f1",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -249,6 +273,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d5263da-d8fd-4904-b237-82f75af3088e",
    "metadata": {
@@ -262,11 +287,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "9b4f01c5",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -285,6 +306,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca2fe119-dbe8-4615-9aea-df1e7da9eb3f",
    "metadata": {
@@ -295,6 +317,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6f401a21",
    "metadata": {},
@@ -303,6 +326,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "58384450",
    "metadata": {},
@@ -314,11 +338,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "4f2fce64",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_df.dropna(axis = 0, subset = ['CustomerID'],inplace = True)"
@@ -353,6 +373,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f08ad72b",
    "metadata": {},
@@ -374,6 +395,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "10882716",
    "metadata": {},
@@ -382,6 +404,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bbc6717c-ec06-4bc8-a527-03849c90424f",
    "metadata": {
@@ -395,11 +418,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "8415f8d8",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -418,6 +437,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cbd04f67",
    "metadata": {},
@@ -429,11 +449,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "97c55065",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_df = data_df[data_df['Quantity'] > 0]"
@@ -443,11 +459,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "36d4eaae",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -464,6 +476,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "579a054b",
    "metadata": {},
@@ -475,17 +488,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "1eb36081",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_df = data_df[data_df['UnitPrice'] > 0]"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90436e8a-af19-4977-8bed-4167561d7257",
    "metadata": {
@@ -570,6 +580,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c82fc88f",
    "metadata": {},
@@ -582,17 +593,14 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "c23355aa",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_df['InvoiceDate'] = pd.to_datetime(data_df['InvoiceDate'])"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad043f77",
    "metadata": {},
@@ -604,11 +612,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "af27f47a",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -640,6 +644,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "48fc5a57-a78d-43ae-ac64-81e00d79a296",
    "metadata": {
@@ -654,11 +659,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "316b6e74",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "inoviceDate_df = data_df.groupby('CustomerID')['InvoiceDate'].max().reset_index()\n",
@@ -676,6 +677,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2fa86b93-1628-4051-99f6-c2cf16b53584",
    "metadata": {
@@ -721,11 +723,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "dff19ecb",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -810,6 +808,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9d771680-3002-49a9-8e1a-a90e19e27a9b",
    "metadata": {
@@ -823,11 +822,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "b12801f8",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -846,6 +841,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "96dfb987-56de-4976-b4a7-473940f1ce48",
    "metadata": {},
@@ -858,11 +854,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "810f2544",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 计算每个客户的频率\n",
@@ -872,6 +864,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "91fd00aa-4507-441d-a22e-1f03ff9cd623",
    "metadata": {},
@@ -1002,6 +995,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ef324719-f99d-4d7a-883a-e11b966e26bf",
    "metadata": {
@@ -1015,11 +1009,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "6975fb21",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1038,6 +1028,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "95a129d1-351b-4d15-ba5c-8ab9f868b734",
    "metadata": {},
@@ -1050,11 +1041,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "44bb1c89",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 计算每个客户的消费金额\n",
@@ -1066,6 +1053,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "37bb18b1-3749-45ef-ade2-729d0962456e",
    "metadata": {},
@@ -1193,6 +1181,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "808a7976-f9f6-4d10-ab4a-0c650f9d7ad6",
    "metadata": {},
@@ -1204,11 +1193,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "425ebdb8",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1235,6 +1220,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "16e6f7c2-d41e-4183-8ed5-509c47f24f60",
    "metadata": {},
@@ -1247,11 +1233,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "aa1c4f25",
-   "metadata": {
-    "vscode": {
-     "languageId": "python"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 将三个 DataFrame 按照 CustomerID 列进行合并\n",
@@ -1261,6 +1243,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bd55ce54-2f97-45e1-ac22-6913aac32205",
    "metadata": {
@@ -1271,6 +1254,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d07434fa",
    "metadata": {},
@@ -1438,6 +1422,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "47cd590b-cd71-4d6b-92d3-a5db019d09a6",
    "metadata": {
@@ -1478,6 +1463,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "caf7b661-8ed1-4681-b047-1ee2d7f16ef6",
    "metadata": {},
@@ -1486,6 +1472,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2d7aa2dc-6ce0-4cab-adb1-fd988e35cafd",
    "metadata": {
@@ -1496,6 +1483,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b25376da-d861-470d-b637-4d21d77442c6",
    "metadata": {},
@@ -1504,6 +1492,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a2f5bb8-8e05-4cc1-9e87-cbdaba231800",
    "metadata": {
@@ -1571,6 +1560,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfed154a-ef72-4fee-b4e2-85a602d4dfe8",
    "metadata": {},
@@ -1579,6 +1569,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0b220241-cd41-4467-beaa-bbcaffe13023",
    "metadata": {
@@ -1593,10 +1584,7 @@
    "execution_count": 35,
    "id": "8df55d01",
    "metadata": {
-    "tags": [],
-    "vscode": {
-     "languageId": "python"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1612,10 +1600,7 @@
    "execution_count": 36,
    "id": "e02f8d01",
    "metadata": {
-    "tags": [],
-    "vscode": {
-     "languageId": "python"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -1652,6 +1637,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca8366b5-c4d7-4129-914f-e537d51a746e",
    "metadata": {
@@ -1704,6 +1690,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ff369ebd-218c-4d9f-8655-ac441d3a5fe3",
    "metadata": {
@@ -1987,6 +1974,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "01fa258f-6d9e-4d6d-a9ee-c04bab1350e3",
    "metadata": {
@@ -2134,6 +2122,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f84ae7b2-d694-4ae8-a6b4-979a96b59bfc",
    "metadata": {
@@ -2144,6 +2133,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36eec20e-454b-41e4-8f4e-49690cb45735",
    "metadata": {},
@@ -2272,6 +2262,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "749aa456-7f70-41dc-a2b4-d37981a942d0",
    "metadata": {},
@@ -2500,6 +2491,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09f98ad3-d853-49ed-9583-cc7024fcbfec",
    "metadata": {},
@@ -2618,6 +2610,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4f98f76e-b8ed-4763-a930-db38e002811e",
    "metadata": {
@@ -2875,6 +2868,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c3d391e1-63b1-4e7d-a181-ee90e7053eb1",
    "metadata": {},
@@ -3022,6 +3016,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eba7de61-aff7-4f79-a677-ac631f09d381",
    "metadata": {
@@ -3032,6 +3027,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ecf99b34-6a8a-40a9-805e-5605afc4d213",
    "metadata": {},
@@ -3056,6 +3052,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e24bbc80",
    "metadata": {},
